--- a/config
+++ b/config
@@ -14,6 +14,7 @@ if [ "git" == "$VERSION" ] || [ "svn" == "$VERSION" ]; then
 fi
 
 # Install root dir
+ROOT_DIR="${SCRIPTPATH}/.."
 INSTALL_ROOT_DIR="${SCRIPTPATH}/../install"
 [ ! -d "${INSTALL_ROOT_DIR}" ] && mkdir -p ${INSTALL_ROOT_DIR}
 INSTALL_ROOT_DIR="$(readlink -f ${INSTALL_ROOT_DIR})"
